--- a/conntact.html
+++ b/conntact.html
@@ -194,7 +194,7 @@
             
             <div>
                 <i class="far fa-envelope"></i>
-                <p>contact@therapyhub.com</p>
+                <p>contact@Serenity.com</p>
             </div>
             
             <div>
@@ -228,15 +228,15 @@
             <h1>Meet Our Experienced Therapists</h1>
             <div class="people">
                 <img src="./assets/images/doctor3.avif" alt="Therapist 1">
-                <p><span>Dr. Anand Padmakumar</span> - Clinical Psychologist <br> Phone: +1 234 567 890 <br> Email: anandpadmakumar@therapyhub.com</p>
+                <p><span>Dr. Anand Padmakumar</span> - Clinical Psychologist <br> Phone: +1 234 567 890 <br> Email: anandpadmakumar@Serenity.com</p>
             </div>
             <div class="people">
                 <img src="./assets/images/doctor2.avif" alt="Therapist 2">
-                <p><span>Dr. Zakir Hussain</span> - Marriage and Family Therapist <br> Phone: +1 243 509 867 <br> Email: zakirhussain@therapyhub.com</p>
+                <p><span>Dr. Zakir Hussain</span> - Marriage and Family Therapist <br> Phone: +1 243 509 867 <br> Email: zakirhussain@Serenity.com</p>
             </div>
             <div class="people">
                 <img src="./assets/images/doctor1.avif" alt="Therapist 3">
-                <p><span>Dr. Michael Jackson</span> - Child and Adolescent Therapist <br> Phone: +1 324 765 909 <br> Email: michealjackson@therapyhub.com</p>
+                <p><span>Dr. Michael Jackson</span> - Child and Adolescent Therapist <br> Phone: +1 324 765 909 <br> Email: michealjackson@Serenity.com</p>
             </div>
         </div>
     </section>
@@ -259,10 +259,10 @@
               </div>
               <div>
                 <p>
-                  Main Email : <a href="mailto:contact@therapy.com" class="contact-link">contact@&shy;therapy.com</a>
+                  Main Email : <a href="mailto:contact@therapy.com" class="contact-link">contact@&shy;serenity.com</a>
                 </p>
                 <p>
-                  Inquiries : <a href="mailto:Info@therapy.com" class="contact-link">Info@therapy.com</a>
+                  Inquiries : <a href="mailto:Info@therapy.com" class="contact-link">Info@serenity.com</a>
                 </p>
               </div>
             </li>
@@ -347,7 +347,7 @@
       </div>
       <div class="footer-bottom">
         <p class="text copyright">
-          &copy; Therapist Hub 2022 | All Rights Reserved by YourTherapyPractice
+          &copy; Serenity 2024 | All Rights Reserved by Serenity
         </p>
         <ul class="social-list">
           <li>
