--- a/service.html
+++ b/service.html
@@ -452,10 +452,10 @@
               </div>
               <div>
                 <p>
-                  Main Email : <a href="mailto:contact@therapy.com" class="contact-link">contact@&shy;therapy.com</a>
+                  Main Email : <a href="mailto:contact@therapy.com" class="contact-link">contact@&shy;serenity.com</a>
                 </p>
                 <p>
-                  Inquiries : <a href="mailto:Info@therapy.com" class="contact-link">Info@therapy.com</a>
+                  Inquiries : <a href="mailto:Info@therapy.com" class="contact-link">Info@serenity.com</a>
                 </p>
               </div>
             </li>
@@ -540,7 +540,7 @@
       </div>
       <div class="footer-bottom">
         <p class="text copyright">
-          &copy; Therapist Hub 2022 | All Rights Reserved by YourTherapyPractice
+          &copy; Serenity 2024 | All Rights Reserved by Serenity
         </p>
         <ul class="social-list">
           <li>
